# wakeword

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/edge_impulse/: CMakeLists.txt
components/edge_impulse/edge-impulse-sdk/classifier/: ei_run_classifier.h  ei_run_dsp.h
components/edge_impulse/model-parameters/: model_metadata.h  model_variables.h
components/edge_impulse/tflite-model/: tflite_learn_1904_compiled.cpp  tflite_learn_1904_compiled.h
main/: CMakeLists.txt  keyword.cpp
